# ArgLAS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  artifact_paths.py  background_knowledge.lp  batch_config.json  bg_nochoice_grd.lp  bg_prf_learned.lp  campaign_progress.py  check_aaf_satisfaction.py  exp1_rescore_complete_info.py  generate_aafs.py  generate_bafs.py  generate_extensions.py  generate_ilasp_task.py  ilasp_config.json  ilasp_policy.py  mode_declarations.las  neg_examples_experimental.lp  plot_benchmark_progress.py  pyproject.toml  replay_archived_evaluation.py  run_experiment_grid.py  run_large_safe.sh  run_v2_campaign.sh  run_v3_gap.sh  semantics_config.json  solver_policy.py  solver_runtime.py  synthetic_neg_robustness.py  synthetic_self_training.py  test_semantics.py  train_test.py  translate_abas.py  validate_config.py  watch_experiment_grid.py
ASPARTIX/: cf2.lp  grounded.lp  preferred.lp  stable.lp
Examples/: BA_160_0_2.apx  WS_100_6_70_70.apx  admbuster_1000.apx  commute.org_20140813_1738.gml.20.apx  ferry2.pfile-L2-C1-02.pddl.2.cnf.apx  thecomet_20131025_1906.gml.20.apx
ILASP_Reference/: ilasp_theory_complexity.md
Real_World_Examples/: Final_Processed_Argumentation_Framework_Data.csv  PIPELINE_AUDIT.md  Preprocessed_Data.csv  Preprocessed_Data_2.csv  RAW_DATA_PAPER_MAPPING.md  README.md  apples_to_apples.py  build_real_world_dataset.py  compare_aspartix_clingo_vs_klingo.py  compare_klingo_learned_custom_depths.py  cv_real_world_pos_only.py  discover_semantics.py  extract_labeled_aafs.py  run_discovery_cv.py  (+1 more)
analysis/: hard_negative_rescore.py  (+2 more)
(+9771 files in other folders)
