[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arglas"
version = "1.0.0"
description = "Learning argumentation semantics as answer set programs with ILASP"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "clingo",
]

[project.scripts]
arglas = "arglas.cli:main"

[tool.setuptools]
packages = ["arglas"]
